cmake_minimum_required(VERSION 3.11)

project(libxml2 VERSION 2.14.4)

if(POLICY CMP0135)
    cmake_policy(SET CMP0135 NEW)
endif()

include(FetchContent)

set(libxml2_version ${PROJECT_VERSION})
FetchContent_Declare(
    libxml2
    URL https://github.com/GNOME/libxml2/archive/refs/tags/v${libxml2_version}.tar.gz
    URL_HASH SHA256=fe59cb94cf6f2ca18d57f3a99e9509d2dd555bbd930e00f637eb3b8ba886c468)
set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
set(LIBXML2_WITH_ICONV OFF CACHE INTERNAL "")
set(LIBXML2_WITH_DEBUG OFF CACHE INTERNAL "")
set(LIBXML2_WITH_LZMA OFF CACHE INTERNAL "")
set(LIBXML2_WITH_ZLIB OFF CACHE INTERNAL "")
set(LIBXML2_WITH_PROGRAMS OFF CACHE INTERNAL "")
set(LIBXML2_WITH_TESTS OFF CACHE INTERNAL "")
set(LIBXML2_WITH_PYTHON OFF CACHE INTERNAL "")
set(LIBXML2_WITH_MODULES OFF CACHE INTERNAL "")
set(LIBXML2_WITH_CATALOG OFF CACHE INTERNAL "")
set(LIBXML2_WITH_HTML OFF CACHE INTERNAL "")
set(LIBXML2_WITH_XPATH OFF CACHE INTERNAL "")
set(LIBXML2_WITH_XINCLUDE OFF CACHE INTERNAL "")
set(LIBXML2_WITH_REGEXPS OFF CACHE INTERNAL "")
set(LIBXML2_WITH_SAX1 OFF CACHE INTERNAL "")
set(LIBXML2_WITH_PUSH OFF CACHE INTERNAL "")
set(LIBXML2_WITH_OUTPUT OFF CACHE INTERNAL "")
FetchContent_MakeAvailable(libxml2)
